deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: nginx-proxy
  labels:
    app: nginx-proxy
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: nginx-proxy
    release: nginx-proxy
    version: Initial
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: nginx-proxy
  labels:
    app: nginx-proxy
    release: nginx-proxy
spec:
strategy:
  rollingUpdate:
    maxUnavailable: 25%
    maxSurge: 25%
  replicas: 1
  selector:
    matchLabels:
      app: nginx-proxy
      release: nginx-proxy
  template:
    metadata:
      labels:
        app: nginx-proxy
        release: nginx-proxy
    spec:
      containers:
        - name: nginx-proxy
          image: "where is the image"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /manage/health
              port: http
            initialDelaySeconds: 180
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /manage/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            limits:
              cpu: 1000m
              memory: 3000Mi
            requests:
              cpu: 250m
              memory: 1000Mi

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: nginx-proxy
  labels:
    app: nginx-proxy
    release: nginx-proxy
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-proxy
              servicePort: http
